--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Desafio 011</title>
+</head>
+<body>
     <title>Desafio do Astronauta</title>
     <link rel="stylesheet" href="estilo/style.css">
 </head>
