--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -49,10 +49,10 @@
     <table>
         <thead>
         <tr>
-            <th rowspan="2">Área</th>
-            <th rowspan="2">Disciplina</th>
-            <th colspan="2">Notas</th>
-            <th rowspan="2">Média</th>
+            <th rowspan="2" scope="rowgroup">Área</th>
+            <th rowspan="2" scope="rowgroup">Disciplina</th>
+            <th colspan="2" scope="rowgroup">Notas</th>
+            <th rowspan="2" scope="rowgroup">Média</th>
             </tr>
         <tr>
                 <th scope="col">Nota 1</th>
@@ -61,7 +61,7 @@
         </thead>
         <tbody>
             <tr>
-            <th rowspan="4">Exatas</th>
+            <th rowspan="4" scope="rowgroup">Exatas</th>
             <td>Matemática</td>
                 <td class="center">0.0</td>
                 <td class="center">0.0</td>
@@ -87,7 +87,7 @@
             </tr>
         </tbody>
         <tr>
-            <th colspan="4" class="cinza">Média de Exatas</th>
+            <th colspan="4" class="cinza" scope="row">Média de Exatas</th>
             <td class="zerogray">0.0</td>
         </tr>
             <tr>
@@ -105,7 +105,7 @@
             </tr>
         <tfoot>
             <tr>
-            <th colspan="4" class="cinza">Média de Humanas</th>
+            <th colspan="4" class="cinza" scope="row">Média de Humanas</th>
             <td class="zerogray">0.0</td>
             </tr>
         </tfoot>
