--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -27,7 +27,7 @@
     </ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi maxime similique, molestiae veritatis ratione totam repellendus? Quidem rem deleniti, quod sint expedita ipsam vel? Quisquam optio ad odio voluptatibus quia! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, esse! Aspernatur, neque officia laudantium, corrupti, error eligendi minus ipsam eaque sequi culpa minima! Doloribus, deserunt corporis fugit tempore dignissimos libero.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum dolorem nobis iusto numquam eos totam odio tempore ea aspernatur minima eaque tenetur laborum repudiandae dolores aliquam, a sed labore! Quod? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur aliquam, saepe enim, et dolorem quasi, placeat sed obcaecati maiores vero ducimus? Consequatur delectus aliquam beatae repellendus fugit incidunt vitae?</p><img src='imagens/cursoemvideo.png'>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
