--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -6,9 +6,10 @@
     <title>Media Query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
     
 </head>
-<body>
+<body onresize="mudouTamanho()" >
     <header>
         <h1>Meu site</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
@@ -34,7 +35,15 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatum maxime quia, quibusdam dolores, natus, architecto rerum aliquid beatae sapiente ipsam minus sunt deserunt impedit id. Rem, consequuntur hic? Quas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores fuga incidunt omnis, voluptatem quo! Voluptas sint omnis maxime sit. Et, iusto velit. Excepturi, saepe laudantium magnam alias vero nostrum?</p>
          </article>
      </main>
-     <script>
+     <script> 
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
+
         function clickMenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
