--- a/exercicios/ex027/flex014 - conteudo flex/index.html
+++ b/exercicios/ex027/flex014 - conteudo flex/index.html
@@ -25,8 +25,9 @@
             <article class="text-media">
                 <div class="text">
                     <h2>Elemento Text->Media</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci tempore alias optio quas nulla rem tempora nam, quos, aut ea fugit a aperiam laudantium dolorem expedita rerum quo mollitia fuga.</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis accusamus nobis distinctio, recusandae, voluptas illo, tempora voluptatum neque tenetur totam delectus officiis et provident pariatur ullam dolore earum deserunt quibusdam.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci tempore alias optio quas nulla rem tempora nam, quos, aut ea fugit a aperiam laudantium dolorem expedita rerum quo mollitia fuga.<p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis accusamus nobis distinctio, recusandae, voluptas illo, tempora voluptatum neque tenetur totam delectus officiis et provident pariatur ullam dolore earum deserunt quibusdam.
+                    </p>
                 </div>
                 <div class="media">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/E0K6mAhxSkU?si=DGLhAfIIevJjAYvG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
